--- a/analytics/app/deployment.yaml
+++ b/analytics/app/deployment.yaml
@@ -4,74 +4,74 @@ metadata:
   name: user-api
 spec:
   selector:
-    app.kubernetes.io/name: coworking-api
+    app.kubernetes.io/name: udacity-pj3-tuenm2-api
   ports:
-  - name: "5153"
-    protocol: TCP
-    port: 5153
-    targetPort: 5153
+    - name: "5153"
+      protocol: TCP
+      port: 5153
+      targetPort: 5153
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: coworking-api
+  name: udacity-pj3-tuenm2-api
   labels:
-    name: coworking-api
+    name: udacity-pj3-tuenm2-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: coworking-api
+      service: udacity-pj3-tuenm2-api
   template:
     metadata:
       labels:
-        service: coworking-api
+        service: udacity-pj3-tuenm2-api
     spec:
       containers:
-      - name: coworking-api
-        image: 452063976112.dkr.ecr.us-east-1.amazonaws.com/coworking-checkin:15
-        imagePullPolicy: Always
-        livenessProbe:
-          httpGet:
-            path: /health_check
-            port: 5153
-          initialDelaySeconds: 50
-          timeoutSeconds: 50
-        readinessProbe:
-          httpGet:
-            path: "/readiness_check"
-            port: 5153
-          initialDelaySeconds: 50
-          timeoutSeconds: 50
-        env:
-        - name: APP_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: db-env
-              key: APP_PORT
-        - name: DB_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              name: db-env
-              key: DB_USERNAME
-        - name: DB_NAME
-          valueFrom:
-            configMapKeyRef:
-              name: db-env
-              key: DB_NAME
-        - name: DB_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: db-env
-              key: DB_PORT
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-secret
-              key: DB_PASSWORD
-        - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: db-env
-              key: DB_HOST
+        - name: udacity-pj3-tuenm2-api
+          image: 516661558134.dkr.ecr.us-east-1.amazonaws.com/udacity-pj3-tuenm2:2
+          imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /health_check
+              port: 5153
+            initialDelaySeconds: 50
+            timeoutSeconds: 50
+          readinessProbe:
+            httpGet:
+              path: "/readiness_check"
+              port: 5153
+            initialDelaySeconds: 50
+            timeoutSeconds: 50
+          env:
+            - name: APP_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: db-env
+                  key: APP_PORT
+            - name: DB_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  name: db-env
+                  key: DB_USERNAME
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: db-env
+                  key: DB_NAME
+            - name: DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: db-env
+                  key: DB_PORT
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-secret
+                  key: DB_PASSWORD
+            - name: DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: db-env
+                  key: DB_HOST
       restartPolicy: Always
